# autonomi

./: .gitignore  Cargo.toml
autnonomi/: Cargo.toml  README.md
autnonomi/autonomi_client_ffi/src/: lib.rs
autonomi/: Cargo.toml
autonomi/autonomi_client_ffi/: Cargo.toml  autonomi_client_ffi.h
autonomi/autonomi_client_ffi/src/: lib.rs
autonomi_client_ffi/src/: lib.rs
